# ad-manager

./: .gitignore  .mcp.json  CLAUDE.md  PROGRESS.md  README.md  dev.db  package-lock.json  package.json  proxy.ts
.claude/: settings.local.json
app/: layout.tsx
app/ad-groups/: page.tsx
app/ads/: page.tsx
app/ai-advisor/: page.tsx
app/budget/: page.tsx
app/campaigns/: page.tsx
app/creatives/: page.tsx
app/dashboard/: page.tsx
app/history/: page.tsx
app/keywords/: page.tsx
app/login/: page.tsx
app/salesforce/: page.tsx
app/search-terms/: page.tsx
app/sync/: page.tsx
app/targets/: page.tsx
components/ad-insights/: kpi-strip.tsx  kpi-tile.tsx  metric-defs.ts  trend-chart.tsx  trend-mode-toggle.tsx
components/animate-ui/: counting-number.tsx  page-transition.tsx
components/ui/: badge.tsx  (+6 more)
docs/: ARCHITECTURE.md  bing-ads-tenant-admin-recovery.md  local-development.md  salesforce-mapping.md
etl/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
etl/scripts/: deploy.sh  generate_design_doc.py  get_oauth_tokens.py  setup_bigquery.py  setup_secrets.sh
etl/src/: config.py  main.py
etl/src/auth/: oauth.py  secret_manager.py
etl/src/bigquery/: client.py  table_schemas.py
etl/src/models/: schemas.py
etl/src/utils/: logging.py  retry.py
hooks/: use-is-in-view.ts
lib/: auth.ts  bigquery.ts  budget-csv.ts  budget-plan-distribute.ts  campaign-mock-data.ts  dashboard-cache.ts  dashboard-progress.ts  format.ts  period.ts  prisma.ts  status.ts  targets-csv.ts  toast.ts  trend-mock.ts
prisma/: dev.db  schema.prisma  seed.ts
(+84 files in other folders)
